--- a/page3.html
+++ b/page3.html
@@ -3,16 +3,13 @@
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <div class="align-block">
-      <div>
+      <div class="padding-top-10">
         <img src="globe.png">
       </div>
-      <div>
+      <div class="padding-left-25">
         <h1>Welcome to the Deep Web</h1>
-      </div>
-      <br>
-      <div>
         <a class="font-big" href="index.html">Home</a>
-        <a class="font-big" href="page2.html">About your Visit</a>
+        <a class="font-big" href="page2.html">About Your Visit</a>
         <a class="font-big white" href="page3.html">Things you will find</a>
         <a class="font-big" href="page4.html">Page 4</a>
         <a class="font-big" href="page5.html">Page 5</a>
@@ -23,6 +20,15 @@
   <body>
     <br>
     <br>
-    <h3 class="white">H3H3 is lyf</h3>
+    <div class="align-block">
+      <h3 class="white">Help Groups</h3>
+      <p>Of the many illicit things people may discover, Help Groups seem the most benevolent of them. However, these are not just the average help group: these help groups include Pedophile help groups, which are highly disturbing to read.</p>
+      <br>
+      <h3 class="white">Illicit goods</h3>
+      <p>Many sites in the Deep Web sell illicit goods, such as drugs, military ordinance, weapons, explosives, and even deadly chemicals and toxins. Many sites are often </p>
+      <br>
+      <h3 class="white">Human Trafficking</h3>
+      <p>Human trafficking is widespread on the Deep Web. In fact, more than 10,000 people are sold each year through the deep web for sexual slavery or other services.</p>
+    </div>
   </body>
 </html>
