--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
     <br>
     <div class="align-block">
       <h3 class="white">The Deep Web</h3>
-      <p>When Visiting the Deep Web, be sure to scramble your ip address so no one will come hunting for you. The best way to do this is with a ghost client, like this one here: <a href="https://www.cyberghostvpn.com/en_US/">CyberGhost</a>. Or, if you would like a static ip, just download the Tor client (Warning: This is not safe for red rooms.) <a href="https://www.torproject.org/">Tor Project</a>.</p>
+      <p>When Visiting the Deep Web, be sure to scramble your ip address so no one will come hunting for you. The best way to do this is with a ghost client, like this one here: <a href="https://www.cyberghostvpn.com/en_US/">CyberGhost</a>. Or, if you would like a static ip, just download the Tor client (Warning: This is not safe for more illicit activities.) <a href="https://www.torproject.org/">Tor Project</a>.</p>
       <br>
       <br>
       <h3 class="white">Other Features</h3>
-      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/!UnB/">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas.<br>If you would like to access a site dedicated for gaming, see <a href="https://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/Nsites.html">here</a>.</p>
+      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/!UnB/">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas.<br>If you would like to access a site dedicated for gaming, see <a href="https://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/page5.html">here</a>.</p>
       <br>
+      <br>
+      <br>
+      <h3 class="white>DISCLAIMER</h3>
+      <p>RGTN is not reponsible for any illegal acivites resulting directly or indirectly from the use or misuse fo this site. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>.</p>
     </div>
  </body>
 </html>
