--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a class="font-big white" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
-        <a class="font-big" href="page4.html">Deep Sitehub</a>
+        <a class="font-big" href="page4.html">DeepHub</a>
         <a class="font-big" href="page5.html">Normal Sitehub</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
@@ -26,12 +26,12 @@
       <br>
       <br>
       <h3 class="white">Other Features</h3>
-      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/.UnB/">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas.<br>If you would like to access a site dedicated for gaming, see <a href="https://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/page5.html">here</a>.</p>
+      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/.UnB/">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas. If you would like to access a site dedicated for gaming, see <a href="http://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/page5.html">here</a>.</p>
       <br>
       <br>
       <br>
-      <h3 class="white>DISCLAIMER</h3>
-      <p>RGTN is not reponsible for any illegal acivites resulting directly or indirectly from the use or misuse fo this site. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>.</p>
+      <h3 class="white>*DISCLAIMER*</h3>
+      <p>RGTN is not reponsible nor affiliated with any illegal acivites resulting directly or indirectly from the use or misuse of this site and sites linked. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>. We do not endorse any illegal websites in the Tor Network.</p>
     </div>
  </body>
 </html>
