--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,12 @@
     <br>
     <div class="align-block">
       <h3 class="white">About your visit:</h3>
-      <p>Be sure to stay away from the 'other' sites in the Deep Web. It is highly suggested that you do NOT visit a red room. (As these room are VERY unsafe for the average user.) Furthermore, do NOT attempt to hire a hitman, these sites may be FBI regulated, and may result in your arrest and/or prosecution.</p>
+      <p>Be sure to stay away from the 'other' sites in the Deep Web. It is highly suggested that you do NOT visit a red room. (As these room are VERY unsafe for the average user.) Furthermore, do NOT attempt to hire a hitman, these sites may be FBI regulated, and may result in your arrest and/or prosecution. As pertaining to mental health concerns, do not fervently watch any amount of violent content, as this may be dangerous. Stay away from Terrorist sites, we do not want any homegrown ISIS members or the like.</p>
+      <br>
+      <br>
+      <br>
+      <h3 class="white>*DISCLAIMER*</h3>
+    <p>RGTN is not reponsible nor affiliated with any illegal acivites resulting directly or indirectly from the use or misuse of this site and sites linked. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>. We do not endorse any illegal websites in the Tor Network.</p>
     </div>
   </body>
 </html>
