--- a/page3.html
+++ b/page3.html
@@ -25,10 +25,15 @@
       <p>Of the many illicit things people may discover, Help Groups seem the most benevolent of them. However, these are not just the average help group: these help groups include Pedophile help groups, which are highly disturbing to read.</p>
       <br>
       <h3 class="white">Illicit goods</h3>
-      <p>Many sites in the Deep Web sell illicit goods, such as drugs, military ordinance, weapons, explosives, and even deadly chemicals and toxins. Many sites are often </p>
+      <p>Many sites in the Deep Web sell illicit goods, such as drugs, military ordinance, weapons, explosives, and even deadly chemicals and toxins. All sites that attempt to sell these goods to you and/or mention the selling of goods to you are illegal. Despite this, business grows steadily.</p>
       <br>
       <h3 class="white">Human Trafficking</h3>
-      <p>Human trafficking is widespread on the Deep Web. In fact, more than 10,000 people are sold each year through the deep web for sexual slavery or other services.</p>
+      <p>Human trafficking is widespread on the Deep Web. In fact, hundreds people are sold each year through the deep web for sexual slavery or other illegal activity. Furthermore, major networks of sites host a variety of criminals that deal in people. Do not buy anyone or anything from these sites. They are examplified purely for informational and educational purposes.</p>
+      <br>
+      <br>
+      <br>
+      <h3 class="white>*DISCLAIMER*</h3>
+    <p>RGTN is not reponsible nor affiliated with any illegal acivites resulting directly or indirectly from the use or misuse of this site and sites linked. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>. We do not endorse any illegal websites in the Tor Network.</p>
     </div>
   </body>
 </html>
