--- a/page6.html
+++ b/page6.html
@@ -14,15 +14,21 @@
         <a class="font-big" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
-        <a class="font-big" href="page4.html">Page 4</a>
-        <a class="font-big" href="page5.html">Page 5</a>
-        <a class="font-big white" href="page6.html">Page 6</a>
+        <a class="font-big" href="page4.html">DeepHub</a>
+        <a class="font-big" href="page5.html">Normal Sitehub</a>
+        <a class="font-big white" href="page6.html">About this site</a>
       </div>
     </div>
   </head>
   <body>
     <br>
     <br>
-    <h3 class="white">How to Basic</h3>
+    <h3 class="white">Here is a lit list of sites you should check out:</h3>
+    <p>This site is made by: <a href="https://github.com/roadkillsanta">Roadkillsanta</a> from <a href="https://github.com/RGTN/">RGTN</a>.</p>
+    <br>
+    <br>
+    <br>
+    <h3> class="white>*DISCLAIMER*</h3>
+    <p>RGTN is not reponsible nor affiliated with any illegal acivites resulting directly or indirectly from the use or misuse of this site and sites linked. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>. We do not endorse any illegal websites in the Tor Network.</p>
   </body>
 </html>
