--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
       <br>
       <br>
       <br>
-      <h3 class="white>*DISCLAIMER*</h3>
+      <h3 class="white">*DISCLAIMER*</h3>
     <p>RGTN is not reponsible nor affiliated with any illegal acivites resulting directly or indirectly from the use or misuse of this site and sites linked. If you have any questions or concerns contact us <a href="http://www.silverraven.com/fy.htm">here</a>. We do not endorse any illegal websites in the Tor Network.</p>
     </div>
   </body>
