--- a/page3.html
+++ b/page3.html
@@ -30,6 +30,9 @@
       <h3 class="white">Human Trafficking</h3>
       <p>Human trafficking is widespread on the Deep Web. In fact, hundreds people are sold each year through the deep web for sexual slavery or other illegal activity. Furthermore, major networks of sites host a variety of criminals that deal in people. Do not buy anyone or anything from these sites. They are examplified purely for informational and educational purposes.</p>
       <br>
+      <h3 class="white">Child Porn</h3>
+      <p>Child porn is one of the most widespread illegal things on the Deep Web. While it can still be found on the normal web, deep web child porn is very thorough and dense. It is not advised to visit these sites in conjunction to the Pedo help groups. It is illegal to be in possesion of, distribute, or consume child porn.</p>
+      <br>
       <br>
       <br>
       <h3 class="white">*DISCLAIMER*</h3>
