--- a/page4.html
+++ b/page4.html
@@ -10,10 +10,10 @@
         <h1>Welcome to the Deep Web</h1>
         <a class="font-big" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About Your Visit</a>
-        <a class="font-big white" href="page3.html">Things you will find</a>
-        <a class="font-big" href="page4.html">Page 4</a>
-        <a class="font-big" href="page5.html">Page 5</a>
-        <a class="font-big" href="page6.html">Page 6</a>
+        <a class="font-big" href="page3.html">Things you will find</a>
+        <a class="font-big white" href="page4.html">DeepHub</a>
+        <a class="font-big" href="page5.html">Normal Sitehub0</a>
+        <a class="font-big" href="page6.html"></a>
       </div>
     </div>
   </head>
@@ -21,17 +21,8 @@
     <br>
     <br>
     <div class="align-block">
-      <h3 class="white">Help Groups</h3>
-      <p>Of the many illicit things people may discover, Help Groups seem the most benevolent of them. However, these are not just the average help group: these help groups include Pedophile help groups, which are highly disturbing to read.</p>
-      <br>
-      <h3 class="white">Illicit goods</h3>
-      <p>Many sites in the Deep Web sell illicit goods, such as drugs, military ordinance, weapons, explosives, and even deadly chemicals and toxins. All sites that attempt to sell these goods to you and/or mention the selling of goods to you are illegal. Despite this, business grows steadily.</p>
-      <br>
-      <h3 class="white">Human Trafficking</h3>
-      <p>Human trafficking is widespread on the Deep Web. In fact, hundreds people are sold each year through the deep web for sexual slavery or other illegal activity. Furthermore, major networks of sites host a variety of criminals that deal in people. Do not buy anyone or anything from these sites. They are examplified purely for informational and educational purposes.</p>
-      <br>
-      <h3 class="white">Child Porn</h3>
-      <p>Child porn is one of the most widespread illicit things on the Deep Web. While it can still be found on the normal web, deep web child porn is very thorough and dense. It is not advised to visit these sites in conjunction to the Pedo help groups. It is illegal to be in possesion of, distribute, or consume child porn.</p>
+      <h3 class="white">Here is a collection of Deep Web sites. It is currently under construction.</h3>
+      <p>http://jntlesnev5o7zysa.onion/ - The Piratebay<br></p>
       <br>
       <br>
       <br>
