--- a/page3.html
+++ b/page3.html
@@ -11,9 +11,9 @@
         <a class="font-big" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About Your Visit</a>
         <a class="font-big white" href="page3.html">Things you will find</a>
-        <a class="font-big" href="page4.html">Page 4</a>
-        <a class="font-big" href="page5.html">Page 5</a>
-        <a class="font-big" href="page6.html">Page 6</a>
+        <a class="font-big" href="page4.html">DeepHub</a>
+        <a class="font-big" href="page5.html">Normal Sitehub</a>
+        <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
   </head>
