--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <br>
       <br>
       <h3 class="white">Other Features</h3>
-      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/.UnB/">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas. If you would like to access a site dedicated for gaming, see <a href="http://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/page5.html">here</a>.</p>
+      <p>This website also hosts a proxy. See <a href="https://rgtn.github.io/WelcTTW/.UnB/index.php">here</a>. Use with care, RGTN is not responsible for any misuse of the proxy. This website is made for educational purposes. We will update the site if it becomes blocked in our local areas. If you would like to access a site dedicated for gaming, see <a href="http://games.swfuniverse.ml">SWFGames</a>. Or, if you prefer, access the normal sitehub <a href="https://rgtn.github.io/WelcTTW/page5.html">here</a>.</p>
       <br>
       <br>
       <br>
