--- a/page4.html
+++ b/page4.html
@@ -12,8 +12,8 @@
         <a class="font-big" href="page2.html">About Your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
         <a class="font-big white" href="page4.html">DeepHub</a>
-        <a class="font-big" href="page5.html">Normal Sitehub0</a>
-        <a class="font-big" href="page6.html"></a>
+        <a class="font-big" href="page5.html">Normal Sitehub</a>
+        <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
   </head>
