--- a/G/index.html
+++ b/G/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="/../index.css">
     <div class="align-block">
       <div class="padding-top-10">
         <img src="globe.png">
@@ -13,6 +13,7 @@
         <a class="font-big" href="page3.html">Hacked Games List</a>
         <a class="font-big" href="page4.html">Other cool places</a>
         <a class="font-big" href="page5.html">About this site</a>
+        <a class="font-big" href="/../index.html">Back</a>
         <a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
       </div>
     </div>
@@ -21,6 +22,8 @@
     <br>
     <br>
     <div class="align-block">
+      <h1 class="white">Welcome to a semi-glorified Gaming Site!</h1>
+      <p>If you really want to play some games, why don't you go home, faggot?<br><br>Actually, we welcome everyone who wants to play some mediocre flash games here. Also, we wonder why you don't just get a good pc and play some real games on <a href="http://store.steampowered.com">Steam</a>. The site is self-explanatory, and if you can't navigate it, then you shoul just stop using the internet.</p>
     </div>
  </body>
 </html>
