--- a/G/index.html
+++ b/G/index.html
@@ -13,7 +13,7 @@
         <a class="font-big" href="page3.html">Hacked Games List</a>
         <a class="font-big" href="page4.html">Other cool places</a>
         <a class="font-big" href="page5.html">About this site</a>
-        <a class="font-big" href="/../index.html">Back</a>
+        <a class="font-big" href="/../WelcTTW/index.html">Back</a>
         <a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
       </div>
     </div>
