--- a/G/index.html
+++ b/G/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/../index.css">
     <div class="align-block">
       <div class="padding-top-10">
-        <img src="globe.png">
+        <img src="icon.png">
       </div>
       <div class="padding-left-25">
         <h1>Welcome to the Gaming section!</h1>
