--- a/G/index.html
+++ b/G/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <div class="align-block">
       <div class="padding-top-10">
         <img src="icon.png">
