--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,9 @@
       <h3 class="white">About your visit:</h3>
       <p>Be sure to stay away from the 'other' sites in the Deep Web. It is highly suggested that you do NOT visit a red room. (As these room are VERY unsafe for the average user.) Furthermore, do NOT attempt to hire a hitman, these sites may be FBI regulated, and may result in your arrest and/or prosecution. As pertaining to mental health concerns, do not fervently watch any amount of violent content, as this may be dangerous. Stay away from Terrorist sites, we do not want any homegrown ISIS members or the like.</p>
       <br>
+      <h3 class="white">Other Features</h3>
+      <p>This site has many different features:<br><a href="/WelcTTW/.UnB/">A Proxy</a><br><a href="/WelcTTW/G/">A Games Section</a><br><a href="">More Coming Soon!</a></p>
+      <br>
       <br>
       <br>
       <h3 class="white">*DISCLAIMER*</h3>
