--- a/G/index.html
+++ b/G/index.html
@@ -23,7 +23,7 @@
     <br>
     <div class="align-block">
       <h1 class="white">Welcome to a semi-glorified Gaming Site!</h1>
-      <p>If you really want to play some games, why don't you go home, faggot?<br><br>Actually, we welcome everyone who wants to play some mediocre flash games here. Also, we wonder why you don't just get a good pc and play some real games on <a href="http://store.steampowered.com">Steam</a>. The site is self-explanatory, and if you can't navigate it, then you shoul just stop using the internet.</p>
+      <p>If you really want to play some games, go get a life.<br><br>Actually, we welcome everyone who wants to play some mediocre flash games here. Also, we wonder why you don't just get a good pc and play some real games on <a href="http://store.steampowered.com">Steam</a>. The site is self-explanatory, and if you can't navigate it, then you shoul just stop using the internet.</p>
     </div>
  </body>
 </html>
