--- a/page6.html
+++ b/page6.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <div class="align-block">
-      <div>
+      <div class="padding-top-10">
         <img src="globe.png">
       </div>
-      <div>
+      <div class="padding-left-25">
         <h1>Welcome to the Deep Web</h1>
         <a class="font-big" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
