--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-Welcome!
-This is a useless site.
-If you want, you can try, but don't come back and cry.
+<!DOCTYPE html> 
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <div class="align-block">
+      <div class="padding-top-10">
+        <img src="globe.png">
+      </div>
+      <div class="padding-left-25">
+        <h1>Welcome to the Web!</h1>
+        <a class="font-big white" href="index.html">Home</a>
+        <a class="font-big" href="page2.html">About your Visit</a>
+        <a class="font-big" href="page3.html">Things you will find</a>
+        <a class="font-big" href="page6.html">About this site</a>
+      </div>
+    </div>
+  </head>
+  <body>
+    <br>
+    <br>
+    <div class="align-block">
+      <h3 class="white">The Useless Web</h3>
+      <p>Welcome to a useless website!</p>
+    </div>
+ </body>
+</html>
