--- a/OP/index.html
+++ b/OP/index.html
@@ -12,7 +12,7 @@
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
         <a class="font-big" href="page4.html">DeepHub</a>
-        <a class="font-big" href="page5.html">Normal Sitehub</a>
+        <a class="font-big" href="page5.html">Why you should KYS</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
