--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <a class="font-big white" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
+        <a class="font-big" href="page4.html">Fun Websites</a>
+        <a class="font-big" href="page5.html">Learn the Meme</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
@@ -20,7 +22,7 @@
     <br>
     <div class="align-block">
       <h3 class="white">The Useless Web</h3>
-      <p>Welcome to a useless website!</p>
+      <p>Welcome to a useless website! We will teach you all about the web! Navigate to each of the pages to find and learn different things about the web. Start with the menu.</p>
     </div>
  </body>
 </html>
