--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html> 
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <div class="align-block">
+      <div class="padding-top-10">
+        <img src="globe.png">
+      </div>
+      <div class="padding-left-25">
+        <h1>Welcome to the Web!</h1>
+        <a class="font-big" href="index.html">Home</a>
+        <a class="font-big selected" href="page2.html">About your Visit</a>
+        <a class="font-big" href="page3.html">Things you will find</a>
+        <a class="font-big" href="page4.html">Fun Websites</a>
+        <a class="font-big" href="page5.html">Learn the Meme</a>
+        <a class="font-big" href="page6.html">About this site</a>
+      </div>
+    </div>
+  </head>
+  <body>
+    <br>
+    <br>
+    <div class="align-block">
+      <h3>About your Visit</h3>
+      <p>This site will not teach you everything about the web, but it will teach you how to navigate around and avoid being caught playing games by your teacher. It is highly advised to choose one legitimate page, and one gaming page. These pages should look similar in color, format, and quality for visual recognition. If the game's tab plays sound, then mute the tab by clicking MOUSE2 or with two fingers on the trackpad, then clicking 'Mute Tab'.</p>
+      <br>
+      <h3></h3>
+    </div>
+ </body>
+</html>
