--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
       </div>
       <div class="padding-left-25">
         <h1>Welcome to the Web!</h1>
-        <a class="font-big" href="index.html">Home</a>
+        <a class="font-big-0" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big selected" href="page3.html">Things you will find</a>
         <a class="font-big" href="page4.html">Fun Websites</a>
