--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
         <a class="font-big" href="page4.html">Fun Websites</a>
-        <a class="font-big" href="page5.html">Learn the Meme</a>
+        <a class="font-big" href="page5.html">Free LANA</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
