--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
         <a class="font-big selected" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
         <a class="font-big" href="page4.html">Fun Websites</a>
-        <a class="font-big" href="page5.html">Learn the Meme</a>
+        <a class="font-big" href="page5.html">Free LANA</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
     </div>
@@ -24,7 +24,11 @@
       <h3>About your Visit</h3>
       <p>This site will not teach you everything about the web, but it will teach you how to navigate around and avoid being caught playing games by your teacher. It is highly advised to choose one legitimate page, and one gaming page. These pages should look similar in color, format, and quality for visual recognition. If the game's tab plays sound, then mute the tab by clicking MOUSE2 or with two fingers on the trackpad, then clicking 'Mute Tab'.</p>
       <br>
-      <h3></h3>
+      <h3>How to click on links</h3>
+      <p>When clicking on links, hovering on them will display their URL in the bottom left corner. The cursor will turn into a mickey mouse hand when hovering. If the link is in JavaScript, then the link will not display but the cursor will still change. If you needed to read this section because you didn't know, please do not ever use a computer ever again. GO BACK TO YOUR IDLE TELEVISION-WATCHING WAYS.</p>
+      <br>
+      <h3>Toxic Communities</h3>
+      <p>There are many toxic communities on the internet. These are groups of people who strive to make others feel inferior. Do not worry, because everything they say are true and you should listen intently to every word they say. Your low self-esteem and small intellect will also help in your eventual suicide.</p>
     </div>
  </body>
 </html>
