--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
     <br>
     <div class="align-block">
       <h3>Things you will find</h3>
-      <p>There are a variety of interesting things</p>
+      <p>There are a variety of interesting things on the Internet.</p>
     </div>
  </body>
 </html>
