--- a/page4.html
+++ b/page4.html
@@ -22,9 +22,9 @@
     <br>
     <div class="align-block">
       <h3 class="white">Fun Websites</h3>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <a href="http://whereis.welcttw.ml/swfgames">SWF Games</a>
+      <a href="http://whereis.welcttw.ml/swfdir">SWF Directory</a>
+      <a href="http://whereis.welcttw.ml/vpnfree">VPN Free</a>
       <a onclick=""></a>
       <a href=""></a>
       <a href=""></a>
@@ -34,5 +34,12 @@
       <a href=""></a>
       <a href=""></a>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <button id="mBtn" class="mBtn"></button>
  </body>
 </html>
