--- a/page4.html
+++ b/page4.html
@@ -8,10 +8,10 @@
       </div>
       <div class="padding-left-25">
         <h1>Welcome to the Web!</h1>
-        <a class="font-big selected" href="index.html">Home</a>
+        <a class="font-big" href="index.html">Home</a>
         <a class="font-big" href="page2.html">About your Visit</a>
         <a class="font-big" href="page3.html">Things you will find</a>
-        <a class="font-big" href="page4.html">Fun Websites</a>
+        <a class="font-big selected" href="page4.html">Fun Websites</a>
         <a class="font-big" href="page5.html">Free LANA</a>
         <a class="font-big" href="page6.html">About this site</a>
       </div>
