--- a/page6.html
+++ b/page6.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html> 
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <div class="align-block">
+      <div class="padding-top-10">
+        <img src="globe.png">
+      </div>
+      <div class="padding-left-25">
+        <h1>Welcome to the Web!</h1>
+        <a class="font-big" href="index.html">Home</a>
+        <a class="font-big" href="page2.html">About your Visit</a>
+        <a class="font-big selected" href="page3.html">Things you will find</a>
+        <a class="font-big" href="page4.html">Fun Websites</a>
+        <a class="font-big" href="page5.html">What is a Meme?</a>
+        <a class="font-big" href="page6.html">About this site</a>
+      </div>
+    </div>
+  </head>
+  <body>
+    <br>
+    <br>
+    <div class="align-block">
+      <h3>About this site</h3>
+      <p>This is a boring part-time project by <a href="https://github.com/roadkillsanta">Roadkillsanta</a>.</p>
+    </div>
+ </body>
+</html>
