--- a/UnB/index.html
+++ b/UnB/index.html
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <p>Blocked? Try a different proxy <a href="mir1.html">here</a>.</p>
     <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy.html" frameborder="0"></iframe>
   </body>
 </html>
