--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
       <a href="http://whereis.welcttw.ml/swfgames.html">SWF Games</a><br>
       <a href="http://whereis.welcttw.ml/swfdir.html">SWF Directory</a><br>
       <a href="http://whereis.welcttw.ml/vpnfree.html">VPN Free</a><br>
-      <a href="http://welcttw.ml/UnB/">PHP-Proxy</a><br>
+      <a href="/UnB/">PHP-Proxy</a><br>
       <a href=""></a>
       <a href=""></a>
       <a href=""></a>
