--- a/UnB/index.html
+++ b/UnB/index.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy.html" frameborder="0">Blocked? Try a different proxy <a href="mir1.html">here</a>.</iframe>
+    <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy.html" frameborder="0"></iframe>
   </body>
 </html>
