--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | prepend: site.baseurl }}">
     <link rel="stylesheet" type="text/css" href="index.css">
     <div class="align-block">
       <div class="padding-top-10">
