--- a/UnB/index.html
+++ b/UnB/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <ol>
-    <li><a href="phpxy.html/">PHPXY</a></li>
-    <li><a href="phpxy2.html/">PHPXY - Mirror</a></li>
+    <li><a href="phpxy.html">PHPXY</a></li>
+    <li><a href="phpxy2.html">PHPXY - Mirror</a></li>
     <li><a href="unbpxy.html">UNBPXY (NOT WORKING)</a></li>
     </ol>
   </body>
