--- a/3ds/index.html
+++ b/3ds/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <div class="align-block">
       <div class="padding-top-10">
-        <img src="globe.png">
+        <img src="icon.png">
       </div>
       <div class="padding-left-25">
-        <h1>3DS Mod Guide & Resources<</h1>
+        <h1>3DS Mod Guide & Resources</h1>
         <a class="font-big selected" href="index.html">Home</a>
         <a class="font-big" href="page2.html">Versions</a>
         <a class="font-big" href="page3.html">Downloads</a>
