--- a/3ds/old/index.html
+++ b/3ds/old/index.html
@@ -10,12 +10,12 @@
       </div>
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
-        <a class="font-big selected" href="index.html">Home</a>
-        <a class="font-big" href="page2.html">Versions</a>
-        <a class="font-big" href="page3.html">Downloads</a>
-        <a class="font-big" href="page4.html">More Info</a>
-        <a class="font-big" href="page5.html">FreeShop</a>
-        <a class="font-big" href="page6.html">About this site</a>
+        <a class="font-big selected" href="/3ds/index.html">Home</a>
+        <a class="font-big" href="/3ds/page2.html">Versions</a>
+        <a class="font-big" href="/3ds/page3.html">Downloads</a>
+        <a class="font-big" href="/3ds/page4.html">More Info</a>
+        <a class="font-big" href="/3ds/page5.html">FreeShop</a>
+        <a class="font-big" href="/3ds/page6.html">About this site</a>
       </div>
     </div>
   </head>
@@ -29,13 +29,16 @@
       <br>
       <h3 class="white">Warning</h3>
       <p>Every time you modify your 3ds's NAND and flash memory, there is a chance for an irrevocable brick. Please proceed wisely. If you do not understand these terms, please do not attempt to flash your 3ds.</p>
-      <p>First, pick your 3ds from the list to begin!</p>
-      <a href="/old/">Old 3ds</a>
-      <a href="/old/">Old 3dsXL</a>
-      <a href="/old/">Old 2ds</a>
-      <a href="/new/">New 3ds</a>
-      <a href="/new/">New 3dsXL</a>
-      <a href="/new/">New 2ds</a>
+      <br>
+      <p>First, pick your 3ds version from the list to begin! If you don't know how to find your version number, see <a href="/3ds/findversion.html">here</a>. If you cannot find your 3ds version, please use an 'All versions' method below.</p>
+      <br>
+      <a href="browserhax.html">4.0.0-8.1.0 Browser</a>
+      <br>
+      <a href="soundhax.html">9.0.0-11.3.0 Soundhax</a>
+      <br>
+      <a href="/3ds/allvflash.html">All versions (requires flashcart)</a>
+      <br>
+      <a href="/3ds/allvhard.html">All versions (requires Hardmod)</a>
     </div>
  </body>
 </html>
