--- a/3ds/old/index.html
+++ b/3ds/old/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>3DS Mod Guide & Resources</title>
     <link rel="shortcut icon" type="image/png" href="{{ "/favicon.png" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/3ds/style.css">
     <div class="align-block">
       <div class="padding-top-10">
         <img class="icon" src="icon.png">
