--- a/3ds/index.html
+++ b/3ds/index.html
@@ -32,17 +32,17 @@
       <p>First, pick your 3ds from the list to begin!</p>
       <br>
       <br>
-      <a href="/old/">Old 3ds</a>
+      <a href="/3ds/old/">Old 3ds</a>
       <br>
-      <a href="/old/">Old 3dsXL</a>
+      <a href="/3ds/old/">Old 3dsXL</a>
       <br>
-      <a href="/old/">Old 2ds</a>
+      <a href="/3ds/old/">Old 2ds</a>
       <br>
-      <a href="/new/">New 3ds</a>
+      <a href="/3ds/new/">New 3ds</a>
       <br>
-      <a href="/new/">New 3dsXL</a>
+      <a href="/3ds/new/">New 3dsXL</a>
       <br>
-      <a href="/new/">New 2ds</a>
+      <a href="/3ds/new/">New 2ds</a>
     </div>
  </body>
 </html>
