--- a/3ds/old/index.html
+++ b/3ds/old/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/3ds/style.css">
     <div class="align-block">
       <div class="padding-top-10">
-        <img class="icon" src="icon.png">
+        <img class="icon" src="/3ds/icon.png">
       </div>
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
