--- a/3ds/index.html
+++ b/3ds/index.html
@@ -11,11 +11,10 @@
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
         <a class="font-big selected" href="index.html">Home</a>
-        <a class="font-big" href="page2.html">Versions</a>
-        <a class="font-big" href="page3.html">Downloads</a>
-        <a class="font-big" href="page4.html">More Info</a>
-        <a class="font-big" href="page5.html">FreeShop</a>
-        <a class="font-big" href="page6.html">About this site</a>
+        <a class="font-big" href="downloads.html">Downloads</a>
+        <a class="font-big" href="moreinfo.html">More Info</a>
+        <a class="font-big" href="freeshop.html">FreeShop</a>
+        <a class="font-big" href="abt.html">About this site</a>
       </div>
     </div>
   </head>
@@ -43,6 +42,8 @@
       <a href="/3ds/new/">New 3dsXL</a>
       <br>
       <a href="/3ds/new/">New 2ds</a>
+      <br>
+      <a href="https://www.youtube.com/redirect?redir_token=5TpK1nxicJrv0e3D0INn59UQehh8MTUxMjA3MTA2NEAxNTExOTg0NjY0&event=video_description&v=gjXVwIce9Q8&q=https%3A%2F%2Fgbatemp.net%2Fthreads%2Fsteelhax-a-steeldiver-subwars-secondary-entrypoint.440673%2F">SteelHax 9.0.0-11.6.0(Remove)</a>
     </div>
  </body>
 </html>
