--- a/3ds/downloads.html
+++ b/3ds/downloads.html
@@ -30,8 +30,8 @@
       <p>Every time you modify your 3ds's NAND and flash memory, there is a chance for an irrevocable brick. Please proceed wisely. If you do not understand this, please do not attempt to flash your 3ds.</p>
       <br>
       <br>
-      <h3 class="white">The Homebrew Launcher</h3>
-      <p>The homebrew launcher, made by <a id="" href=""></a></p>
+      <h3 class="white" id="THL">The Homebrew Launcher</h3>
+      <p>The homebrew launcher, made by Smealum is available <a id="" href="">here</a>. The homebrew launcher is a powerful 3ds program that can read, edit, and install .3DSX files. Such files, like certain releases of FreeShop and GameCoin adder, can</p>
       <p>
       <br>
       <a href="/3ds/old/">Old 3dsXL</a>
