--- a/3ds/old/index.html
+++ b/3ds/old/index.html
@@ -11,11 +11,10 @@
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
         <a class="font-big selected" href="/3ds/index.html">Home</a>
-        <a class="font-big" href="/3ds/page2.html">Versions</a>
-        <a class="font-big" href="/3ds/page3.html">Downloads</a>
-        <a class="font-big" href="/3ds/page4.html">More Info</a>
-        <a class="font-big" href="/3ds/page5.html">FreeShop</a>
-        <a class="font-big" href="/3ds/page6.html">About this site</a>
+        <a class="font-big" href="/3ds/downloads.html">Downloads</a>
+        <a class="font-big" href="/3ds/moreinfo.html">More Info</a>
+        <a class="font-big" href="/3ds/freeshop.html">FreeShop</a>
+        <a class="font-big" href="/3ds/abt.html">About this site</a>
       </div>
     </div>
   </head>
@@ -32,10 +31,19 @@
       <br>
       <p>First, pick your 3ds version from the list to begin! If you don't know how to find your version number, see <a href="/3ds/findversion.html">here</a>. If you cannot find your 3ds version, please use an 'All versions' method below.</p>
       <br>
-      <a href="browserhax.html">4.0.0-8.1.0 Browser</a>
       <br>
-      <a href="soundhax.html">9.0.0-11.3.0 Soundhax</a>
+      <h3 class="white">Versions 4.0.0-8.1.0 and 9.0.0-11.6.0</h3>
       <br>
+      <a href="browserhax.html">4.0.0-8.1.0 Browserhax</a>
+      <br>
+      <a href="homemenuhax.html">9.0.0-11.2.0 HomeMenuhax</a>
+      <br>
+      <a href="/3ds/soundhax.html">9.0.0-11.3.0 Soundhax</a>
+      <br>
+      <a href="steelhax.html">9.0.0-11.6.0 Steelhax</a>
+      <br>
+      <br>
+      <h3 class="white">All Versions</h3>
       <a href="/3ds/allvflash.html">All versions (requires flashcart)</a>
       <br>
       <a href="/3ds/allvhard.html">All versions (requires Hardmod)</a>
