--- a/3ds/old/browserhax.html
+++ b/3ds/old/browserhax.html
@@ -11,11 +11,10 @@
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
         <a class="font-big selected" href="/3ds/index.html">Home</a>
-        <a class="font-big" href="/3ds/page2.html">Versions</a>
-        <a class="font-big" href="/3ds/page3.html">Downloads</a>
-        <a class="font-big" href="/3ds/page4.html">More Info</a>
-        <a class="font-big" href="/3ds/page5.html">FreeShop</a>
-        <a class="font-big" href="/3ds/page6.html">About this site</a>
+        <a class="font-big" href="/3ds/downloads.html">Downloads</a>
+        <a class="font-big" href="/3ds/moreinfo.html">More Info</a>
+        <a class="font-big" href="/3ds/freeshop.html">FreeShop</a>
+        <a class="font-big" href="/3ds/abt.html">About this site</a>
       </div>
     </div>
   </head>
