--- a/3ds/old/browserhax.html
+++ b/3ds/old/browserhax.html
@@ -28,6 +28,9 @@
       <br>
       <h3 class="white">Warning</h3>
       <p>Every time you modify your 3ds's NAND and flash memory, there is a chance for an irrevocable brick. Please proceed wisely. If you do not understand these terms, please do not attempt to flash your 3ds.</p>
+      <br>
+      <br>
+      <h3 class="white">Files you will need:</h3>
       <p>
       The Latest Release of: <a href="/3ds/downloads.html#Boot9Strap">Boot9Strap</a>
       <br>
@@ -39,7 +42,38 @@
       <br>
       </p>
       <br>
-      
+      <br>
+      <h3 class="white">Getting Started</h3>
+      <br>
+      <br>
+      <p>Be sure to follow the instructions listed here exactly to specification. Any unclarity can be confirmed <a href="https://3ds.guide">here</a>.<br>
+First, you will need to power off your device and remove the SD card. Extract any .zip files downloaded from the above links. Any files required will already be precompiled and ready for install/use.<br>
+If you don't have a computer that has an SD card reader, get an SD card to usb adapter such as the one <a href="https://www.amazon.com/IOGEAR-MicroSD-Reader-Writer-GFR204SD/dp/B0046TJG1U">here</a>.<br>
+Insert the SD card into your computer/adapter, then find it in your file explorer. Once done, copy the 'boot.firm' file from the extracted Luma3DS zip to the root of your SD card.<br>
+Then, copy boot.3dsx from the extracted zip into the root of your SD card and create a folder called 'boot9strap'.<br>
+Once done, find 'boot9strap.firm' and 'boot9strap.firm.sha' from the extracted boot9strap zip and copy it into your newly created 'boot9strap folder.'<br>
+Afterwards, copy 'SafeB9SIntaller.dat' and 'Launcher.dat' from your extracted SafeB9SInstaller zip to the root of the SD card.<br>
+Finally, eject your SD card and reinsert it into your 3DS, then power it on.</p>
+      <br>
+      <br>
+      <br>
+      <h3 class="white">Launching SafeB9SInstaller</h3>
+      <br>
+      <br>
+      <p>Launch the browser and then go into the browser settings. Scroll to the bottom and tap on Initialize Save Data (It may be called clear all save data)<br>
+Once done, go to one of the links listed below:
+<a href="https://dukesrg.github.io/?SafeB9SInstaller.dat">https://dukesrg.github.io/?SafeB9SInstaller.dat</a><br>
+<a href="http://go.gateway-3ds.com/">http://go.gateway-3ds.com/</a><br>
+<a href="http://www.reboot.ms/3ds/load.html?Launcher.dat">http://www.reboot.ms/3ds/load.html?Launcher.dat</a><br>
+<a href="http://dukesrg.dynu.net/3ds/rop?GW17567.dat&Launcher.dat">http://dukesrg.dynu.net/3ds/rop?GW17567.dat&Launcher.dat</a><br>
+Make sure to try each url as some may not work for certain versions of 3DS. If the exploit was successful, then you will have launched SafeB9SInstaller.</p>
+      <br>
+      <br>
+      <h3 class="white">Installing Bootstrap<h3>
+      <br>
+      <br>
+      <p>Wait for all safety checks to complete, and when prompted, input the key combination on the D-Pad to enter Boot9Strap.<br>
+Once completed, press A to reboot your 3ds.</p>
     </div>
  </body>
 </html>
