--- a/3ds/downloads.html
+++ b/3ds/downloads.html
@@ -10,8 +10,8 @@
       </div>
       <div class="padding-left-25">
         <h1>3DS Mod Guide & Resources</h1>
-        <a class="font-big selected" href="index.html">Home</a>
-        <a class="font-big" href="downloads.html">Downloads</a>
+        <a class="font-big" href="index.html">Home</a>
+        <a class="font-big selected" href="downloads.html">Downloads</a>
         <a class="font-big" href="moreinfo.html">More Info</a>
         <a class="font-big" href="freeshop.html">FreeShop</a>
         <a class="font-big" href="abt.html">About this site</a>
@@ -25,16 +25,14 @@
       <h3 class="white">Downloads</h3>
       <p>3DS mod guide downloads, any files hosted here MAY be the newest version, and will be updated every week. If any downloads are old, they will be updated shortly.</p>
       <br>
-      <br>
       <h3 class="white">Warning</h3>
       <p>Every time you modify your 3ds's NAND and flash memory, there is a chance for an irrevocable brick. Please proceed wisely. If you do not understand this, please do not attempt to flash your 3ds.</p>
       <br>
-      <br>
       <h3 class="white" id="THL">The Homebrew Launcher</h3>
-      <p>The homebrew launcher, made by Smealum is available <a id="" href="">here</a>. The homebrew launcher is a powerful 3ds program that can read, edit, and install .3DSX files. Such files, like certain releases of FreeShop and GameCoin adder, can</p>
-      <p>
+      <p>The homebrew launcher made by Smealum is available <a href="">here</a>. The homebrew launcher is a powerful 3ds program that can read, edit, and install .3DSX files.</p>
       <br>
-      <a href="/3ds/old/">Old 3dsXL</a>
+      <h3 class="white">Luma3DS</h3>
+      <p><a href="/3ds/old/">here</a>. Luma3DS is</p>
       <br>
       <a href="/3ds/old/">Old 2ds</a>
       <br>
