--- a/page4.html
+++ b/page4.html
@@ -26,12 +26,11 @@
       <a href="http://whereis.welcttw.ml/swfdir.html">SWF Directory</a><br>
       <a href="http://whereis.welcttw.ml/vpnfree.html">VPN Free</a><br>
       <a href="/UnB/">PHP-Proxy</a><br>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
-      <a href=""></a>
+      <a href="/G/">[INDEV] Game Site</a>
+      <a href="/3ds/">3DS Mod Guide</a>
+      <a href="/OD/">Overdose on Memes</a>
+      <a href="/OP/">OP DAY</a>
+      <a href="/EXCLU/">Exclusive!</a>
       <a href=""></a>
     </div>
     <br>
