--- a/3ds/downloads.html
+++ b/3ds/downloads.html
@@ -15,7 +15,7 @@
         <a class="font-big" href="moreinfo.html">More Info</a>
         <a class="font-big" href="freeshop.html">FreeShop</a>
         <a class="font-big" href="abt.html">About this site</a>
-        <a class="font-big" href="/Index.html">Back to Dir</a>
+        <a class="font-big" href="/Page4.html">Back to Dir</a>
       </div>
     </div>
   </head>
