--- a/3ds/old/browserhax.html
+++ b/3ds/old/browserhax.html
@@ -15,6 +15,7 @@
         <a class="font-big" href="/3ds/moreinfo.html">More Info</a>
         <a class="font-big" href="/3ds/freeshop.html">FreeShop</a>
         <a class="font-big" href="/3ds/abt.html">About this site</a>
+        <a class="font-big" href="/page4.html">Back to Dir</a>
       </div>
     </div>
   </head>
