--- a/UnB/phpxy.html
+++ b/UnB/phpxy.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <iframe id="iframe1" src="http://whereis.welcttw.ml/phpxy.html" frameborder="0"></iframe>
+    <iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy.html" frameborder="0"></iframe>
   </body>
 </html>
