--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <br>
     <div class="align-block">
       <h3 class="white">The Useless Web</h3>
-      <p>Welcome to a useless website! We will teach you all about the web! Navigate to each of the pages to find and learn different things about the web. Start with the menu.</p>
-    </div>
+      <p>Welcome to a useless website! We will teach you all about the web! Navigate to each of the pages to find and learn different things about the web. Start with the menu.</p>
+      <br>
+      <h3 class="white">Self-Reflection</h3>
+      <p>We will also teach you to hate yourself in every way possible. Please think degrading thoughts as you browse this website, and also be sure to ask your mother if you were a mistake (The answer to this question should be yes, and you were supposed to be aborted but it was 1 day too late into the pregnancy). Be sure to check on your accomplishments, because 1 year later, you still will have a lesser impact upon the world than that ant that you stepped on yesterday. If you are considering suicide, please do not do so because then someone inconveniently has to miserably clean your gooey remains from the sidewalk below the building that you jumped from.</p>
+    </div>
  </body>
 </html>
