--- a/G/unhacked/tanktrouble.html
+++ b/G/unhacked/tanktrouble.html
@@ -26,8 +26,7 @@
       <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
         <param name="movie" value="flashmovie.swf" />
         <param name="quality" value="high" />
-        <PARAM NAME="SCALE" VALUE="default">
-        <embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" type="application/x-shockwave-flash" width="100%" height="100%" SCALE="default" pluginspage="http://www.macromedia.com/go/getflashplayer"/>
+        <embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" type="application/x-shockwave-flash" width="720px" height="490px" SCALE="default" pluginspage="http://www.macromedia.com/go/getflashplayer"/>
       </object>
     </div>
  </body>
