--- a/G/unhacked/tanktrouble.html
+++ b/G/unhacked/tanktrouble.html
@@ -23,11 +23,16 @@
     <br>
     <div class="align-block">
       <h3 class="white">Tank Trouble</h3>
-      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
-        <param name="movie" value="flashmovie.swf" />
-        <param name="quality" value="high" />
-        <embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" type="application/x-shockwave-flash" width="720px" height="490px" SCALE="default" pluginspage="http://www.macromedia.com/go/getflashplayer"/>
-      </object>
+      <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle"	height="490px" width="712px" >
+					<param name="movie" value="/G/swfs/tank-trouble-3.8c.swf"> 
+					<param name="quality" value="high"> 
+					<param name="play" value="true"> 
+					<param name="loop" value="true"> 
+					<param name="wmode" value="transparent"> 
+					<param name="allowFullScreen" value="true"> 
+					<param name="flashvars" value=""> 
+					<embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle"  height="490px" width="712px"></embed>
+				</object>
     </div>
  </body>
 </html>
