--- a/G/unhacked/tanktrouble.html
+++ b/G/unhacked/tanktrouble.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html> 
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="/G/index.css">
-    <div class="align-block">
-      <div class="padding-top-10">
-        <img src="icon.png">
-      </div>
-      <div class="padding-left-25">
-        <h1>Welcome to the Gaming section!</h1>
-        <a class="font-big" href="index.html">Home</a>
-        <a class="font-big white" href="page2.html">Normie Game List</a>
-        <a class="font-big" href="page3.html">Hacked Games List</a>
-        <a class="font-big" href="page4.html">Other cool places</a>
-        <a class="font-big" href="page5.html">About this site</a>
-        <a class="font-big" href="/WelcTTW/index.html">Back</a>
-        <a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
-      </div>
-    </div>
-  </head>
-  <body>
-    <br>
-    <br>
-    <div class="align-block">
-      <h3 class="white">Tank Trouble</h3>
-      <object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle"	height="490px" width="712px" >
-					<param name="movie" value="/G/swfs/tank-trouble-3.8c.swf"> 
-					<param name="quality" value="high"> 
-					<param name="play" value="true"> 
-					<param name="loop" value="true"> 
-					<param name="wmode" value="transparent"> 
-					<param name="allowFullScreen" value="true"> 
-					<param name="flashvars" value=""> 
-					<embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle"  height="490px" width="712px"></embed>
-				</object>
-    </div>
- </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/G/index.css">
+		<div class="align-block">
+			<div class="padding-top-10">
+				<img src="icon.png">
+			</div>
+			<div class="padding-left-25">
+				<h1>Welcome to the Gaming section!</h1>
+				<a class="font-big" href="/G/index.html">Home</a>
+				<a class="font-big white" href="/G/page2.html">Normie Game List</a>
+				<a class="font-big" href="/G/page3.html">Hacked Games List</a>
+				<a class="font-big" href="/G/page4.html">Other cool places</a>
+				<a class="font-big" href="/G/page5.html">About this site</a>
+				<a class="font-big" href="/index.html">Back</a>
+				<a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
+			</div>
+		</div>
+	</head>
+	<body>
+		<br>
+		<br>
+		<div class="align-block">
+			<h3 class="white">Tank Trouble</h3>
+			<object type="application/x-shockwave-flash" codebase="//download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" align="middle"	height="490px" width="712px" >
+			<param name="movie" value="/G/swfs/tank-trouble-3.8c.swf"> 
+			<param name="quality" value="high"> 
+			<param name="play" value="true"> 
+			<param name="loop" value="true"> 
+			<param name="wmode" value="transparent"> 
+			<param name="allowFullScreen" value="true"> 
+			<param name="flashvars" value=""> 
+			<embed src="/G/swfs/tank-trouble-3.8c.swf" quality="high" pluginspage="//www.macromedia.com/go/getflashplayer" play="true" loop="true" wmode="transparent" allowfullscreen="true" flashvars="" type="application/x-shockwave-flash" align="middle"  height="490px" width="712px"></embed>
+			</object>
+		</div>
+	</body>
 </html>
