--- a/G/unhacked/index.html
+++ b/G/unhacked/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html> 
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/G/index.css">
+		<div class="align-block">
+			<div class="padding-top-10">
+				<img src="icon.png">
+			</div>
+			<div class="padding-left-25">
+				<h1>Welcome to the Gaming section!</h1>
+				<a class="font-big" href="/G/index.html">Home</a>
+				<a class="font-big white" href="/G/unhacked/">Normie Game List</a>
+				<a class="font-big" href="/G/hacked/">Hacked Games List</a>
+				<a class="font-big" href="/G/page4.html">Other cool places</a>
+				<a class="font-big" href="/G/page5.html">About this site</a>
+				<a class="font-big" href="/index.html">Back</a>
+				<a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
+			</div>
+		</div>
+	</head>
+	<body>
+		<br>
+		<br>
+		<div class="align-block">
+			<h3 class="white">Normie Game List</h3>
+		</div>
+	</body>
+</html>
