--- a/G/example.html
+++ b/G/example.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html> 
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <div class="align-block">
-      <div class="padding-top-10">
-        <img src="icon.png">
-      </div>
-      <div class="padding-left-25">
-        <h1>Welcome to the Gaming section!</h1>
-        <a class="font-big" href="index.html">Home</a>
-        <a class="font-big white" href="page2.html">Normie Game List</a>
-        <a class="font-big" href="page3.html">Hacked Games List</a>
-        <a class="font-big" href="page4.html">Other cool places</a>
-        <a class="font-big" href="page5.html">About this site</a>
-        <a class="font-big" href="/WelcTTW/index.html">Back</a>
-        <a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
-      </div>
-    </div>
-  </head>
-  <body>
-    <br>
-    <br>
-    <div class="align-block">
-      <h3 class="white">Game</h3>
-      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
-        <param name="movie" value="flashmovie.swf" />
-        <param name="quality" value="high" />
-        <PARAM NAME="SCALE" VALUE="default">
-        <embed src="/G/swfs/game.swf" quality="high" type="application/x-shockwave-flash" width="100%" height="100%" SCALE="default" pluginspage="http://www.macromedia.com/go/getflashplayer"/>
-      </object>
-    </div>
- </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<div class="align-block">
+			<div class="padding-top-10">
+				<img src="icon.png">
+			</div>
+			<div class="padding-left-25">
+				<h1>Welcome to the Gaming section!</h1>
+				<a class="font-big" href="/G/index.html">Home</a>
+				<a class="font-big" href="page2.html">Normie Game List</a>
+				<a class="font-big" href="page3.html">Hacked Games List</a>
+				<a class="font-big" href="page4.html">Other cool places</a>
+				<a class="font-big" href="page5.html">About this site</a>
+				<a class="font-big" href="/index.html">Back</a>
+				<a class="font-big" href="http://games.swfuniverse.ml">SWF Games</a>
+			</div>
+		</div>
+	</head>
+	<body>
+		<br>
+		<br>
+		<div class="align-block">
+			<h1 class="white">Welcome to a semi-glorified Gaming Site!</h1>
+			<p>If you really want to play some games, go get a life.<br><br>Actually, we welcome everyone who wants to play some mediocre flash games here. Also, we wonder why you don't just get a good pc and play some real games on <a href="http://store.steampowered.com">Steam</a>. The site is self-explanatory, and if you can't navigate it, then you should just stop using the internet.</p>
+			<br>
+			<br>
+			<h1 class="white">Self-reflection</h1>
+			<p>Think about what you have accomplished in the 30 or more seconds it took to discover this gaming section. Then reflect on how much your parents dislike you and why you have been disowned. Your parents probably wished they aborted you </p>
+		</div>
+	</body>
 </html>
