--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
 	<head>
+		<script type="text/javascript" src="pass.js"></script>
 		<style type="text/css">
 		body {
 		margin:   0;
@@ -16,6 +17,8 @@
 		</style>
 	</head>
 	<body>
-		<iframe id="iframe1" src="http://whereis.welcttw.gq/phpxy.html" frameborder="0"></iframe>
+		<script>
+			passWord();
+		</script>
 	</body>
 </html>
