--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html> 
 	<head>
-		<script type="text/javascript" src="pass.js"></script>
 		<style type="text/css">
 		body {
 		margin:   0;
@@ -17,8 +16,6 @@
 		</style>
 	</head>
 	<body>
-		<script>
-			passWord();
-		</script>
+		<script type="text/javascript" src="pass.js">passWord();</script>
 	</body>
 </html>
