--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -16,6 +16,6 @@
 		</style>
 	</head>
 	<body>
-		<script type="text/javascript" src="pass.js">passWord();</script>
+		<input type="button" onclick="pass.js" value="Login">
 	</body>
 </html>
