--- a/EXCLU/index.html
+++ b/EXCLU/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
 	<head>
+		<script type="text/javascript" src="pass.js"></script>
 		<style type="text/css">
 		body {
 		margin:   0;
